...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Daftar Buku'),
        elevation: 0,
        backgroundColor: const Color(0xFFE85D75),
        foregroundColor: Colors.white,
      ),
      body: isLoading
          ? const Center(child: CircularProgressIndicator())
...
                    ),
                  ),
                ],
              ),
              const SizedBox(height: 24),
              Text(
                'Sinopsis',
                style: Theme.of(
                  context,
                ).textTheme.titleMedium?.copyWith(fontWeight: FontWeight.bold),
              ),
              const SizedBox(height: 8),
              Text(
...
                      builder: (context) =>
                          BorrowFormPage(user: widget.user, book: book),
                    ),
                  );
                },
                icon: const Icon(Icons.add_circle_outline),
                label: const Text('Pinjam Buku Ini'),
                style: FilledButton.styleFrom(
                  minimumSize: const Size.fromHeight(50),
                  shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(16),
                  ),
                ),
...
